# cmd/api/main.go
@@ -12,6 +12,11 @@
 // @host      localhost:8080
 // @BasePath  /
 
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @description Type "Bearer" followed by a space and JWT token. Example: "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+
 package main
 
 import (
